--- a/app/src/main/res/layout/schedule.xml
+++ b/app/src/main/res/layout/schedule.xml
@@ -7,45 +7,63 @@
     android:layout_height="match_parent">
 
     <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="0dp"
+        android:layout_height="159dp"
+        android:background="@drawable/schedul1"
+        android:scaleType="centerInside"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.666"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageButton
+        android:id="@+id/params"
+        android:layout_width="0dp"
+        android:layout_height="62dp"
+        android:background="@drawable/schedul2"
+        android:scaleType="centerInside"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
+
+    <ImageView
         android:id="@+id/imageView5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_width="0dp"
+        android:layout_height="117dp"
+        android:background="@drawable/schedul3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/multiple2" />
+        app:layout_constraintTop_toBottomOf="@+id/params" />
 
-    <Button
-        android:id="@+id/params"
-        style="@style/Widget.AppCompat.Button.Borderless"
-        android:layout_width="106dp"
-        android:layout_height="42dp"
-        android:layout_marginTop="136dp"
-        android:layout_marginEnd="16dp"
-        app:iconTint="#00FFFFFF"
+    <ImageButton
+        android:id="@+id/route"
+        android:layout_width="0dp"
+        android:layout_height="138dp"
+        android:background="@drawable/schedul4"
+        android:scaleType="centerInside"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView5" />
+
+    <ImageView
+        android:id="@+id/imageView8"
+        android:layout_width="0dp"
+        android:layout_height="293dp"
+        android:background="@drawable/schedul5"
+        android:scaleType="centerInside"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/route" />
 
     <Button
         android:id="@+id/back_btn"
-        style="@style/Widget.AppCompat.Button.Borderless"
-        android:layout_width="38dp"
-        android:layout_height="34dp"
-        android:layout_marginStart="20dp"
+        android:layout_width="152dp"
+        android:layout_height="73dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="4dp"
-        app:iconTint="#00FFFFFF"
+        android:background="#00000000"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/route"
-        style="@style/Widget.AppCompat.Button.Borderless"
-        android:layout_width="383dp"
-        android:layout_height="115dp"
-        android:layout_marginTop="284dp"
-        android:layout_marginEnd="8dp"
-        app:iconTint="#00FFFFFF"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
