--- a/app/src/main/res/layout/main_screen.xml
+++ b/app/src/main/res/layout/main_screen.xml
@@ -18,10 +18,11 @@
     <Button
         android:id="@+id/button3"
         android:layout_width="60dp"
+        android:layout_height="60dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="32dp"
-        android:layout_height="60dp"
         android:alpha="0.5"
+        android:background="@drawable/btn_grey"
         android:foreground="@drawable/ic_baseline_search_24"
         app:cornerRadius="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -30,10 +31,11 @@
     <Button
         android:id="@+id/button4"
         android:layout_width="60dp"
+        android:layout_height="60dp"
         android:layout_marginStart="16dp"
         android:layout_marginBottom="32dp"
-        android:layout_height="60dp"
         android:alpha="0.5"
+        android:background="@drawable/btn_grey"
         android:foreground="@drawable/ic_baseline_favorite_border_24"
         app:cornerRadius="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -42,9 +44,10 @@
     <Button
         android:id="@+id/button5"
         android:layout_width="60dp"
-        android:layout_marginBottom="32dp"
         android:layout_height="60dp"
+        android:layout_marginBottom="32dp"
         android:alpha="0.5"
+        android:background="@drawable/btn_grey"
         android:foreground="@drawable/ic_baseline_horizontal_rule_24"
         app:cornerRadius="10dp"
         app:layout_constraintBottom_toTopOf="@+id/button6"
@@ -53,9 +56,10 @@
     <Button
         android:id="@+id/button6"
         android:layout_width="60dp"
-        android:layout_marginBottom="32dp"
         android:layout_height="60dp"
+        android:layout_marginBottom="32dp"
         android:alpha="0.5"
+        android:background="@drawable/btn_grey"
         android:foreground="@drawable/ic_baseline_navigation_24"
         app:cornerRadius="10dp"
         app:layout_constraintBottom_toTopOf="@+id/button3"
@@ -64,10 +68,11 @@
     <Button
         android:id="@+id/layers_btn"
         android:layout_width="60dp"
+        android:layout_height="60dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="16dp"
-        android:layout_height="60dp"
         android:alpha="0.5"
+        android:background="@drawable/btn_grey"
         android:foreground="@drawable/ic_baseline_layers_24"
         app:cornerRadius="10dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -78,6 +83,7 @@
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:alpha="0.5"
+        android:background="@drawable/btn_grey"
         android:foreground="@drawable/ic_baseline_add_24"
         app:cornerRadius="10dp"
         app:layout_constraintBottom_toTopOf="@+id/button5"
@@ -104,6 +110,7 @@
         android:layout_marginTop="32dp"
         android:height="60dp"
         android:alpha="0.5"
+        android:background="@drawable/btn_grey"
         android:foreground="@drawable/ic_baseline_sort_24"
         android:textColor="@color/black"
         app:cornerRadius="10dp"
