--- a/app/src/main/res/layout/offer.xml
+++ b/app/src/main/res/layout/offer.xml
@@ -18,7 +18,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/go_back_button"
         android:layout_width="120dp"
         android:layout_height="40dp"
         android:layout_marginStart="5dp"
