--- a/app/src/main/res/layout/params_layout.xml
+++ b/app/src/main/res/layout/params_layout.xml
@@ -17,7 +17,7 @@
             android:scrollbars="vertical">
 
             <Button
-                android:id="@+id/btttn"
+                android:id="@+id/return_btn"
                 android:layout_width="106dp"
                 android:layout_height="55dp"
                 android:background="#00ff00ff"
@@ -25,7 +25,7 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <ImageView
-                android:id="@+id/asdasd"
+                android:id="@+id/scrollView"
                 android:layout_width="wrap_content"
                 android:layout_height="1044dp"
                 android:background="@drawable/params"
