--- a/app/src/main/res/layout/swipe_choice.xml
+++ b/app/src/main/res/layout/swipe_choice.xml
@@ -30,11 +30,12 @@
         app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />
 
     <ImageButton
-        android:id="@+id/imageButton2"
+        android:id="@+id/return_button"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_marginStart="32dp"
         android:layout_marginTop="16dp"
+        android:background="@color/white"
         android:foreground="@drawable/ic_baseline_arrow_back_24"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -45,9 +46,9 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:background="@drawable/ic_baseline_radio_button_unchecked_24"
-        app:layout_constraintBottom_toBottomOf="@+id/imageButton2"
-        app:layout_constraintStart_toEndOf="@+id/imageButton2"
-        app:layout_constraintTop_toTopOf="@+id/imageButton2" />
+        app:layout_constraintBottom_toBottomOf="@+id/return_button"
+        app:layout_constraintStart_toEndOf="@+id/return_button"
+        app:layout_constraintTop_toTopOf="@+id/return_button" />
 
     <ImageView
         android:id="@+id/imageView4"
