--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="card_red">#FFBB0000</color>
+    <color name="btn_grey">#FFDDDDDD</color>
+    <color name="carsharing">#E32929</color>
 </resources>
